# PDF-Translation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: translate_example.py
src/pdf_translation/: __init__.py  cli.py  extractor.py  pdf_writer.py  pipeline.py  translator.py
src/pdf_translation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
