[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-translation"
version = "0.1.0"
description = "Translate English PDF documents into Chinese PDF documents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.1",
    "reportlab>=4.2.0",
]

[project.scripts]
pdf-translate = "pdf_translation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
include = ["src"]
